# hakuhodo_key3

./: .gitignore  LICENSE  README.md
src/backend/: .env.sample  README.md  pyproject.toml
src/backend/accounts/: admin.py  email.py  serializers.py  urls.py  views.py
src/backend/accounts/migrations/: 0001_initial.py
src/backend/accounts/templates/accounts/: activation.html  confirmation.html  password_changed_confirmation.html  password_reset.html  username_changed_confirmation.html  username_reset.html
src/backend/api/: settings.py  urls.py
src/backend/docs/: er.md  learn.md  postgres.md  reference.md
src/backend/docs/api/: DjangoAuth.json  api.md  hakuhodo_key3_hackathon.html  hakuhodo_key3_hackathon.json  hakuhodo_key3_hackathon.yml
src/backend/project/: admin.py  models.py  serializer.py  views.py
src/backend/project/migrations/: 0001_initial.py
src/backend/projects/: admin.py  models.py  serializer.py  urls.py  views.py
src/backend/projects/migrations/: 0001_initial.py  0002_alter_project_deadline.py
src/backend/proposals/: admin.py  models.py  serializer.py  urls.py  views.py
src/backend/proposals/migrations/: 0001_initial.py
src/backend/users/: admin.py  models.py  serializer.py  urls.py  views.py
src/backend/users/migrations/: 0001_initial.py  0002_remove_user_icon_user_tokenid.py
src/backend/votes/: admin.py  models.py  serializer.py  urls.py  views.py
src/backend/votes/migrations/: 0001_initial.py
src/contracts/: .env.sample  README.md  globals.d.ts  hardhat.config.ts  package-lock.json  package.json
src/frontend/: .env.sample  (+3 more)
(+28 files in other folders)
